--- a/package.json
+++ b/package.json
@@ -4,8 +4,18 @@
   "description": "Backend for bday",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "start:dev": "node-dev server.js"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "sequelize": "^5.21.3"
+  },
+  "devDependencies": {
+    "node-dev": "^4.0.0"
+  }
 }
