--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,17 @@ services:
       - "3001:3001"
     volumes:
       - .:/usr/src/app
+    depends_on:
+      - db
+  db:
+    image: postgres:12.1
+    ports:
+      - 5432:5432
+    volumes:
+      - ./pg_data:/var/lib/postgresql
+    environment:
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_HOST: ${POSTGRES_HOST}
+
