--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "pg": "^7.18.1",
+    "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.3"
   },
   "devDependencies": {
-    "node-dev": "^4.0.0"
+    "node-dev": "^4.0.0",
+    "sequelize-cli": "^5.5.1"
   }
 }
