--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "start:dev": "node-dev server.js",
-    "prettier": "prettier --write **/**.js"
+    "prettier": "prettier --write **/**.js",
+    "db:migrate": "sequelize-cli db:migrate"
   },
   "author": "",
   "license": "MIT",
