--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hapi/joi": "^17.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "moment": "^2.24.0",
     "pg": "^7.18.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.3"
