Added an API for creating a template and for matching the template with user data. Updated documentation

--- a/docs/index.yaml
+++ b/docs/index.yaml
@@ -6,8 +6,13 @@ info:
     $ref: "errors.yaml#/Description"
 tags:
   - name: Bdays
+  - name: Templates
 paths:
   "/bdays":
     $ref: "bdays.yaml#/More"
   "/bdays/{id}":
     $ref: "bdays.yaml#/One"
+  "/templates":
+    $ref: "templates.yaml#/CreateTemplate"
+  "/templates/{templateId}/{bdayId}":
+    $ref: "templates.yaml#/PrepareTemplate"
