Added an API for getting a template, changing it, and getting a list of templates. Updated the documentation

--- a/docs/index.yaml
+++ b/docs/index.yaml
@@ -7,12 +7,16 @@ info:
 tags:
   - name: Bdays
   - name: Templates
+    description: |
+      Для формирования __blocks и attachments__ используйте https://api.slack.com/tools/block-kit-builder
 paths:
   "/bdays":
     $ref: "bdays.yaml#/More"
   "/bdays/{id}":
     $ref: "bdays.yaml#/One"
   "/templates":
-    $ref: "templates.yaml#/CreateTemplate"
+    $ref: "templates.yaml#/CreateOrGetAllTemplate"
+  "/templates/{templateId}":
+    $ref: "templates.yaml#/GetOrUpdateOrDeleteTemplate"
   "/templates/{templateId}/{bdayId}":
     $ref: "templates.yaml#/PrepareTemplate"
