--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Backend for bday",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --collect-coverage",
+    "test:watch": "jest --collect-coverage --watchAll",
     "start": "node server.js",
     "start:dev": "node-dev server.js",
     "prettier": "prettier --write **/**.js",
@@ -27,8 +28,11 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.1",
+    "jest": "^25.1.0",
     "node-dev": "^4.0.0",
     "prettier": "^1.19.1",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "superagent": "^5.2.2",
+    "supertest": "^4.0.2"
   }
 }
