Added the ability to enter defies in first and last names in validation

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,4 +1,4 @@
 bundle:
-	redoc-cli bundle index.yaml  --options.jsonSampleExpandLevel=all --options.menuToggle --options.nativeScrollbars --options.requiredPropsFirst --options.sortPropsAlphabetically --title "Cargo - API Documentation"
+	redoc-cli bundle index.yaml  --options.jsonSampleExpandLevel=all --options.menuToggle --options.nativeScrollbars --options.requiredPropsFirst --options.sortPropsAlphabetically --title "Bday Bot - API Documentation"
 watch:
 	redoc-cli serve index.yaml -p 1234 --watch --ssr --options.jsonSampleExpandLevel=all --options.menuToggle --options.nativeScrollbars --options.requiredPropsFirst --options.sortPropsAlphabetically
