Added config for heroku

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest --collect-coverage",
     "test:watch": "jest --collect-coverage --watchAll",
     "start": "NODE_ENV=production node server.js",
+    "heroku": "NODE_ENV=heroku node server.js",
     "start:dev": "node-dev server.js",
     "prettier": "prettier --write **/**.js",
     "db:migrate": "sequelize-cli db:migrate",
